refactored little unimportant things to look better, and deleted a possible image that isn't relevant anymore